[tool.poetry]
name = "discourtesy"
version = "0.1.1"
description = "A minimal framework to handle Discord interactions."
license = "MIT"
authors = ["Robin Mahieu <robin.mahieu@protonmail.com>"]

readme = "README.md"
repository = "https://github.com/robinmahieu/discourtesy"
keywords = ["discord", "discourtesy"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
PyNaCl = "^1.5.0"
starlette = "^0.18.0"
uvicorn = "^0.17.0"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
