[tool.poetry]
name = "discourtesy"
version = "0.4.0"
description = "A minimal framework to handle Discord interactions."
license = "MIT"
authors = ["Robin Mahieu <robin.mahieu@protonmail.com>"]

readme = "README.md"
repository = "https://github.com/robinmahieu/discourtesy"
keywords = ["discord", "discourtesy"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
loguru = "^0.6.0"
PyNaCl = "^1.5.0"
starlette = "^0.19.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
